modified main page

--- a/dev/less/header.less
+++ b/dev/less/header.less
@@ -29,12 +29,13 @@ header{width: 100%;
 
           	}}
 
-ul{.inline;
-	padding-top: 40px;
-	width: 85%;
-	li{.inline;
-	   .fonts(22px, grey, 700, sans-serif);
-	    padding-left: 100px;}
+nav ul{.inline;
+	     padding-top: 40px;
+	     width: 85%;
+	     li{.inline;
+	        .fonts(22px, grey, 700, sans-serif);
+	         padding-left: 100px;}
 }
 a:link {text-decoration:none; color: #C0C0C0;}
 a:visited {text-decoration:none; color: #C0C0C0}
+
