--- a/Old_version/Inspe.css
+++ b/Old_version/Inspe.css
@@ -68,7 +68,7 @@ opacity:1.0; -moz-opacity:1.0; filter:alpha(opacity=100);
       font-size: 17px;
       background-color: white;
       display: inline-block;
-      margin-left: 242px;}
+      margin-left: 132px;}
 
 a.ssil{color: black;
        font-weight: bold;}
@@ -87,3 +87,8 @@ div.vnim p:first-child {text-align: center;
 .dec {list-style-type: decimal;}
 
 div.vnim>p{line-height: 23px;}
+
+ul.vakansii>li{text-align: justify;
+               padding-right: 20px;}
+
+               
